--- a/PlasticManufacturer.Client/app/Customers/customer.component.html
+++ b/PlasticManufacturer.Client/app/Customers/customer.component.html
@@ -139,7 +139,7 @@
                                           
                                             <div class="col pdlft">
                                                 <label>Second Label:</label>
-                                                <input class="form-control" placeholder="[None]" type="text" />
+                                                <input class="c-padding" cla placeholder="[None]" type="text" />
                                             </div>
                                         </div>
                                         <div class="form-group">
