--- a/PlasticManufacturer.Client/app/employees/employee.component.html
+++ b/PlasticManufacturer.Client/app/employees/employee.component.html
@@ -16,8 +16,7 @@
                     </ul>
                 </div>
                 
-                <div class="form-horizontal">
-                    <div style="border-top:2px ; padding:15px 0"></div>
+                <div class="form-horizontal">                   
                     <div class="fields-row">
                         <div class="fields-bar">
                             <div class="form-group">
@@ -48,14 +47,14 @@
                                 </div>
                                 <div class="col">
                                     <label class="custom-select">Sex</label>
-                                    <select style=" border-radius:5px 5px 5px 5px;">
+                                    <select>
                                         <option></option>
                                         <option></option>
                                     </select>
                                 </div>
                                 <div class="col">
                                     <label class="custom-select">Marital Status</label>
-                                    <select style=" border-radius:5px 5px 5px 5px;">
+                                    <select>
                                         <option></option>
                                         <option></option>
                                     </select>
@@ -70,7 +69,7 @@
                             <div class="form-group">
                                 <div class="col">
                                     <label class="control-label " for="Address">Address</label>
-                                    <input style="width: 555px" class="form-control text-box single-line" id="Address" name="Address" type="text" value="" />
+                                    <input class="form-control text-box single-line" id="Address" name="Address" type="text" value="" />
                                 </div>
                             </div>
                         </div>
@@ -82,11 +81,11 @@
                             <div class="form-group">
                                 <div class="col">
                                     <label class="control-label " for="City">City</label>
-                                    <input class="form-control address-box text-box single-line" id="City" name="City" type="text" value="" />
+                                    <input class="form-control  text-box single-line" id="City" name="City" type="text" value="" />
                                 </div>
                                 <div class="col">
                                     <label class="control-label" for="State">State</label>
-                                    <input style="width:75px;" class="form-control text-box single-line" id="State" name="State" type="text" value="" />
+                                    <input  class="form-control text-box single-line" id="State" name="State" type="text" value="" />
                                 </div>
                                 <div class="col">
                                     <label class="control-label " for="ZipCode">Zip Code</label>
@@ -126,7 +125,7 @@
                                 </div>
                                 <div class="col">
                                     <label class="custom-select">Title</label>
-                                    <select style=" border-radius:5px 5px 5px 5px;">
+                                    <select>
                                         <option></option>
                                         <option></option>
                                     </select>
@@ -134,7 +133,7 @@
 
                                 <div class="col">
                                     <label class="custom-select">Department</label>
-                                    <select style=" border-radius:5px 5px 5px 5px;">
+                                    <select>
                                         <option></option>
                                         <option></option>
                                     </select>
@@ -148,7 +147,7 @@
                             <div class="form-group">
                                 <div class="col">
                                     <label class="custom-select">Status</label>
-                                    <select style=" border-radius:5px 5px 5px 5px;">
+                                    <select>
                                         <option>Active</option>
                                         <option>inactive</option>
                                     </select>
