--- a/PlasticManufacturer.Client/app/Customers/customer.component.html
+++ b/PlasticManufacturer.Client/app/Customers/customer.component.html
@@ -285,7 +285,7 @@
                                                 <div class="form-group">
                                                     <div class="notes-style">
                                                         <label>Notes:</label>
-                                                        <textarea cols="30" rows="10" class="form-control"></textarea>
+                                                        <textarea cols="30" rows="10" class=""></textarea>
 
                                                     </div>
                                                 </div>
