--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -45,6 +45,7 @@
                     <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Rating</a></li>
                     <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
                     <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
+                    <li><a routerLink="/salesOrders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sales Order</a></li>
                     <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
 
                     <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
