--- a/PlasticManufacturer.Client/app/Customers/customer.component.html
+++ b/PlasticManufacturer.Client/app/Customers/customer.component.html
@@ -34,7 +34,7 @@
                                                     </span>
                                                 </span>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col">
                                                 <label for="status">Status:</label>
                                                 <select class="form-control" formControlName="status_Id">
                                                     <option *ngFor="let customerSt of customerStatus" [value]="customerSt.id">{{ customerSt.name }}</option>
