--- a/PlasticManufacturer.Client/styles.css
+++ b/PlasticManufacturer.Client/styles.css
@@ -1,4 +1,6 @@
 @import url(default.css);
+@import url(media-desktop.css);
+@import url(media-laptops.css);
 @import url(media-768.css);
 @import url(media-480.css);
 
