--- a/PlasticManufacturer.Client/default.css
+++ b/PlasticManufacturer.Client/default.css
@@ -418,6 +418,7 @@
         background: #074875;
         position: fixed;
         width: 100%;
+        z-index:15;
         /* background: #14567e;
 	background: -moz-linear-gradient(top,  #14567e 0%, #16557e 7%, #4eb0d9 7%, #1496cb 11%, #1285b9 32%, #0b4c7b 79%, #0a3c69 98%, #092841 100%);
 	background: -webkit-linear-gradient(top,  #14567e 0%,#16557e 7%,#4eb0d9 7%,#1496cb 11%,#1285b9 32%,#0b4c7b 79%,#0a3c69 98%,#092841 100%);
