--- a/PlasticManufacturer.Client/default.css
+++ b/PlasticManufacturer.Client/default.css
@@ -1,6 +1,6 @@
 ﻿
 
-    /* app css stylesheet */
+    /* appp css stylesheet */
     .hoverwell:hover {
         background-color: #485563;
         cursor: pointer;
