--- a/PlasticManufacturer.Client/app/employees/employee-list.component.html
+++ b/PlasticManufacturer.Client/app/employees/employee-list.component.html
@@ -20,7 +20,7 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Description</th>
+                            <th>Last Name</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,7 +30,7 @@
                                     {{employee.name}}
                                 </a>
                             </td>
-                            <td>{{ employee.description }}</td>
+                            <td>{{ employee.lastName }}</td>
                         </tr>
                     </tbody>
                 </table>
