--- a/PlasticManufacturer.Client/app/Customers/customer-list.component.html
+++ b/PlasticManufacturer.Client/app/Customers/customer-list.component.html
@@ -20,7 +20,7 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Description</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,7 +30,7 @@
                                     {{customer.name}}
                                 </a>
                             </td>
-                            <td>{{ customer?.status?.id }}</td>
+                            <td>{{ customer?.status?.name }}</td>
                         </tr>
                     </tbody>
                 </table>
