--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -31,23 +31,35 @@
         <div class="nav-mobile"></div>
         <ul class="shell">
             <li>
-                <a href='#'>Table</a>
+                <a>Table</a>
                 <ul>
-                    <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>
-                    <li><a routerLink="/titles" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Title</a></li>
-                    <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
-                    <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Rating</a></li>
-                    <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
+                    <li>
+                        <a>Customer</a>
+                        <ul>
+                            <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Rating</a></li>
+                            <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Status</a></li>
+                            <li><a routerLink="/customerContacteds" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contacted</a></li>
+                            <li><a routerLink="/secondLabels" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Second Label</a></li>
+                            <li><a routerLink="/freights" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Freight</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a>Employee</a>
+                        <ul>
+                            <li><a routerLink="/titles" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Title</a></li>
+                            <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
+                            <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
+                            <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
+                        </ul>
+                    </li>                            
+                    <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>                  
                     <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pelle</a></li>
                     <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                     <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                     <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
-                    <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>
-                    <li><a routerLink="/employees" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Employee</a></li>
-                    <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Status</a></li>
-                    <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
+                    <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>                                       
                     <li><a routerLink="/cities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">City</a></li>
-                    <li><a routerLink="/customerDefaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Default</a></li>
+                    <!--<li><a routerLink="/customerDefaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Default</a></li>-->
 
                     <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
 
@@ -62,9 +74,10 @@
                 </ul>
             </li>
             <li>
-                <a href='#'>Maintain</a>
+                <a>Maintain</a>
                 <ul>
                     <li><a routerLink="/customers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer</a></li>
+                    <li><a routerLink="/employees" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Employee</a></li>
                     <!--   <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
                        <li>@Html.ActionLink("Target Type", "index", "TargetTypes")</li>
                        <li>@Html.ActionLink("Defaults", "tela", "Categories")</li>
